# progress

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  setup.py  test_progress.py
progress/: __init__.py  bar.py  colors.py  counter.py  helpers.py  spinner.py
